--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
 
-    <div class="main-nav">
+    <nav class="main-nav">
         <ul class="nav">
           <li class="name">Ali Luhrassebi</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="Hobbies.html">Hobbies</a></li>
         </ul>
-    </div>
+    </nav>
 
     <header>
-      <img src="images/leylah.jpg" alt="Picture of Ali Luhrassebi's dog" class="profile-image">
+      <img src="images/leylah.png" alt="Picture of Ali Luhrassebi's dog" class="profile-image">
       <h1 class="tag name">Hello, I'm Ali.</h1>
       <p class="tag location">My home is Santa Monica, Caifornia.</p>
     </header>
 
     <main class="flex">
-      <div class="card">
+      <section class="card">
         <h2>Background</h2>
         <p> I am an aspiring web developer, from Santa Monica, California. I have spent the last 10 years operating a mixed martial arts facilty and coaching young athletes. I developed many great martial artists who went on to win multiple world championships.
           I'm very excited for this career change and can't wait to get started.</p>
         <p>I’ve been a professional mixed martial arts fighter and am a life-long learner who's always interested in expanding my skills.</p>
         <img src="images/laguna.png" alt="laguna-beach" class="extra-image">
-      </div>
+      </section>
 
       <div class="card">
         <h2>Goals</h2>
